# CLI_Telecom-Billing-System

./: CMakeLists.txt  main.c  script.py  test-instructions.txt  tests.c
.github/workflows/: c-cpp.yml  cmake-single-platform.yml
data/: users.txt
data/users/: aziz_records.txt
data/users/aziz/: records.txt
include/: billing.h  fileIO.h  program.h  tests.h  userService.h
models/: customer.h  record.h  user.h
src/: billing.c  fileIO.c  program.c  userService.c
